<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.aboutus.AboutUs">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:background="#FFB300"

            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_centerInParent="true"
                android:layout_width="280dp"
                app:cardCornerRadius="20dp"
                android:layout_height="140dp">

                <RelativeLayout
                    android:layout_gravity="center"
                    android:background="#00FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.cardview.widget.CardView
                        android:layout_centerInParent="true"
                        android:id="@+id/carda3"
                        app:cardElevation="3dp"
                        android:layout_centerHorizontal="true"
                        app:cardCornerRadius="20dp"
                        android:layout_width="270dp"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF">

                        <RelativeLayout
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            android:layout_width="match_parent"

                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_centerHorizontal="true"
                                android:id="@+id/dline1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/d_line1"
                                android:textAlignment="center"
                                android:textColor="#000000"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_centerHorizontal="true"
                                android:id="@+id/dcontact1"
                                android:layout_below="@+id/dline1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/d_contact1"
                                android:textAlignment="center"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_centerHorizontal="true"
                                android:id="@+id/dmail1"
                                android:layout_below="@+id/dcontact1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/d_mail1"
                                android:textAlignment="center"
                                android:textColor="#000000"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_marginTop="17dp"
                                android:id="@+id/musci_1"
                                android:layout_below="@+id/link7"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="\n\n\n Classical Music By \nSree Vastav"
                                android:textColor="#FB8C00"
                                android:textAlignment="center"
                                android:textStyle="bold"/>


                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>
	
</LinearLayout>